# vocatio

./: .gitignore  AGENTS.md  README.md  pyproject.toml
conf/: copy_reviewed_set_assets.default.yaml  copy_reviewed_set_assets.raw.yaml  manual_vlm_models.yaml  manual_vlm_models.yaml.example  vlm_boundary_prompt.group_compare_long.txt  vlm_boundary_prompt.group_compare_long_costume_first.txt  vlm_boundary_prompt.group_compare_short.txt  vlm_models.yaml.example  vlm_prompt_templates.yaml
docs/: DEPRICATED.md  MACHINE_LEARNING.md  PROJECT_INTENT.md  TODO.md
scripts/pipeline/: README.md  apply_video_sync_map.py  assign_photos_to_timeline.py  benchmark_caption_llamacpp_qwen4b.py  benchmark_schema_llamacpp_qwen4b.py  benchmark_semantic_announcement_models.py  bootstrap_photo_boundaries.py  build_ml_boundary_candidate_dataset.py  build_ml_boundary_split_manifest.py  build_performance_proxy_index.py  build_performance_timeline.py  build_photo_boundary_features.py  build_photo_pre_model_annotations.py  build_photo_quality_annotations.py  build_photo_review_index.py  build_photo_segments.py  build_semantic_announcement_demo.py  build_vlm_photo_boundary_gui_index.py  copy_reviewed_set_assets.default.yaml  copy_reviewed_set_assets.py  copy_reviewed_set_assets.raw.yaml  demo_semantic_announcement_classifier.py  embed_photo_previews_dinov2.py  estimate_video_sync_map.py  evaluate_ml_boundary_verifier.py  export_event_media_csv.py  export_media.py  export_ml_boundary_reviewed_truth.py  export_recursive_photo_csv.py  extract_announcement_candidates.py  extract_embedded_photo_jpg.py  (+61 more)
(+63 files in other folders)
