[project]
name = "vocatio"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
    "pyside6>=6.11.0",
    "rich==15.0.0",
]

[dependency-groups]
gpu = [
    "torch==2.11.0+cu128",
    "torchvision==0.26.0+cu128",
    "xformers>=0.0.35",
]
autogluon = [
    "torch==2.9.0+cu128",
    "torchvision==0.24.0+cu128",
    "autogluon==1.5.0",
    "fastai>=2.3.1,<2.9",
    "spacy<3.9",
]

[tool.uv]
default-groups = ["gpu"]
conflicts = [
    [
        { group = "gpu" },
        { group = "autogluon" },
    ],
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
